--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ version = "1"
 
 [dependencies.syn]
 version = "1"
-features = ["full", "extra-traits", "visit-mut"]
+features = ["full", "visit-mut"]
 
 [dependencies.thiserror]
 version = "1"
