--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "fv-template"
 version = "0.1.0"
 authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
 edition = "2018"
+license = "MIT"
+documentation = "https://docs.rs/fv-template"
+description = "Field-value based string templating"
+repository = "https://github.com/sval-rs/fv-template"
+readme = "README.md"
+exclude = [
+    ".github/*",
+]
 
 [dependencies.proc-macro2]
 version = "1"
