--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,10 +7,17 @@ env:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
     - name: Run tests
       run: cargo test --all --verbose
+
+  example:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@8e5e7e5ab8b370d6c329ec480221332ada57f0ab
+      - name: Run example
+        run: |
+          cd examples/app && \
+          cargo run
